tools/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pimba
spec:
  selector:
    app: pimba
  ports:
    - name: http
      port: 80
      targetPort: 8080
